NATTQA-ENV/force-app/main/default/objects/Pricebook2/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>