NATTQA-ENV/force-app/main/default/objects/Pricebook2/fields/NATT_Price_Book_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Price_Book_Type__c</fullName>
    <label>NATT Price Book Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NATT Units Price Book</fullName>
            </value>
            <value>
                <fullName>NATT BluEdge</fullName>
            </value>
            <value>
                <fullName>NATT Lynx Fleet</fullName>
            </value>
            <value>
                <fullName>NATT eSolutions</fullName>
                <isActive>false</isActive>
                <label>NATT eSolutions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>